[package]
name = "blog-api"
version = "0.1.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-graphql ={ version = "4.0.1", features = ["uuid", "dataloader", "chrono"] }
async-graphql-rocket = "4.0.1"
async-mutex = "1.4"
async-std = "1.11.0"
async-trait = { version = "0.1" }
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
casbin = "2.0.9"
chrono = "0.4.19"
data-encoding = "2.3"
dotenv = "0.15.0"
hmac = "0.12.1"
image = "0.24.2"
jwt = "0.16.0"
log = "0.4"
regex = "1.5.6"
ring = "0.16"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
sea-orm = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
sea-orm-rocket = "0.5.0"
serde_json = { version = "^1" }
sha2 = "0.10.2"
snafu = "0.7.1"
strum = "0.24.0"
strum_macros = "0.24"
tokio = { version = "1" }
uuid = { version = "0.8", features = ["serde"] }

entity = { path = "entity" }
migration = { path = "migration" }

[profile.release]
codegen-units = 1
lto = "fat"
